samples/_failures_safe/1761448840_891740_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ca3ee25.c: In function ‘main’:
./samples/SAFE/__tmp_1ca3ee25.c:166:37: error: expected ‘)’ at end of input
  166 |     print_tokens(tokens, token_count
      |                 ~                   ^
      |                                     )
./samples/SAFE/__tmp_1ca3ee25.c:166:5: error: expected declaration or statement at end of input
  166 |     print_tokens(tokens, token_count
      |     ^~~~~~~~~~~~
